# id3manager

./: .pre-commit-config.yaml  LICENSE  README.md  id3manager.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/id3manager/: __main__.py  metadata.py  utils.py
src/id3manager/formats/: __init__.py  abc.py  formats.py  text.py  toml.py
tests/: conftest.py  test_edit.py  test_get.py  test_id3manager.py  test_set.py
