[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "id3manager"
description = "The ID3 metadata manager for MP3 files."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["id3", "mp3", "audio", "tags", "metadata"]
authors = [
  { name = "Ihor Kalnytskyi", email = "ihor@kalnytskyi.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mutagen >= 1.46.0",
  "tomlkit >= 0.11.6",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ikalnytskyi/id3manager#readme"
Issues = "https://github.com/ikalnytskyi/id3manager/issues"
Source = "https://github.com/ikalnytskyi/id3manager"

[project.scripts]
id3manager = "id3manager.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = [
  "pytest >= 7.2.0",
]
scripts.run = "python -m pytest {args:-vv}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "pre-commit >= 2.20.0",
]
scripts.run = "python -m pre_commit run --all-files --show-diff-on-failure"
